--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "blog api",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node index.js",
+    "server": "nodemon index.js"
   },
   "repository": {
     "type": "git",
@@ -19,5 +20,9 @@
     "express": "^4.21.2",
     "mongoose": "^8.9.2",
     "nodemon": "^3.1.9"
-  }
+  },
+  "devDependencies": {
+    "@types/express": "^5.0.0"
+  },
+  "type": "commonjs"
 }
