--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "express": "^4.21.2",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.9.2",
-    "nodemon": "^3.1.9"
+    "nodemon": "^3.1.9",
+    "redis": "^4.7.0"
   },
   "devDependencies": {
     "@types/express": "^5.0.0"
