--- a/package.json
+++ b/package.json
@@ -1,4 +1,3 @@
-
 {
   "name": "blog_post_api",
   "version": "1.0.0",
@@ -25,7 +24,9 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.9.2",
     "nodemon": "^3.1.9",
-    "redis": "^4.7.0"
+    "redis": "^4.7.0",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.1"
   },
   "devDependencies": {
     "@types/express": "^5.0.0"
